[package]
name = "lib-parser"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-lexer-types = { path = '../../interface/lib-lexer-types' }
lib-parser-types = { path = '../../interface/lib-parser-types' }
lib-error = { path = '../../interface/lib-error' }